--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.0.1",
-    "nodemon": "^2.0.4",
-    "sinon": "^9.0.2"
+    "colors": "^1.4.0",
+    "nodemon": "^2.0.4"
   }
 }
