--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon app.js MONGO_URI=mongodb+srv://NeNtoMid:89070701057Aa@database-ns317.mongodb.net/chat?retryWrites=true&w=majority PORT=3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "mobile-device-detect": "^0.4.3",
     "moment": "^2.27.0",
     "mongoose": "^5.9.24",
-    "socket.io": "^2.3.0",
-    "colors": "^1.4.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
