--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "chat-withniceguy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "compression": "^1.7.4",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "helmet": "^3.23.3",
-    "mobile-device-detect": "^0.4.3",
-    "moment": "^2.27.0",
-    "mongoose": "^5.9.24",
-    "requirejs": "^2.3.6",
-    "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  }
+	"name": "chat-withniceguy",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"colors": "^1.4.0",
+		"compression": "^1.7.4",
+		"ejs": "^3.1.3",
+		"express": "^4.17.1",
+		"helmet": "^3.23.3",
+		"mobile-device-detect": "^0.4.3",
+		"moment": "^2.27.0",
+		"mongoose": "^5.9.24",
+		"requirejs": "^2.3.6",
+		"socket.io": "^2.3.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.4"
+	},
+	"engines": {
+		"node": ">=16.0.0 <17.0.0"
+	}
 }
